--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
               <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Skills</a>
+              <a class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#portfolio">Portofolio</a>
@@ -43,9 +43,10 @@
 
     <!--jumbotron-->
     <section class="jumbotron text-center">
-      <h1 class="display-4">Genio Prakoso</h1>
+      <img src="/src-img/gen1.jpg" alt="profile" width="200px" class="rounded-circle img-thumbnail" data-bs-theme="dark">
+      <h1 class="display-5">Genio Prakoso</h1>
       <p class="lead">- Graphic Designer -</p>
-      <p class="italic">"Nulla Dies Sine Linea"</p>
+      <p id="motto" class="italic">"Nulla Dies Sine Linea"</p>
     </section>
     <!--akhir jumbotron-->
 
@@ -67,18 +68,61 @@
         </div>
         <!--row2-->
         <div class="row p-3">
-          <div class="col-sm-6">
-            <p class="text-break">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga libero iste soluta ipsa. Doloribus perspiciatis expedita sequi mollitia similique. At, eveniet esse! Velit inventore possimus nihil minima veniam, rem quo.</p>
+          <div class="col-sm-6" class="sum">
+            <p align="justify" class="text-break">Composing messages in an informative, communicative, effective, and creative way that is presented in elements of form, color, letters, space, and texture visually is a professional skill that I have. The beginning of my designer journey began in 2015 when I decide to enter Cor Jesu Vocational High School as Visual Communication Design student for 3 years.</p>
           </div>
-          <div class="col-sm-6">
-            <p class="text-break">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus, asperiores nesciunt dolorem fuga repellat eius suscipit deserunt dolorum sequi eum nobis ut animi recusandae impedit consequatur omnis, vero aliquid libero.</p>
+          <div class="col-sm-6" text>
+            <p align="justify" class="text-break"> After that, becoming Administrator as a communicator between company and consumer for 3 years until late 2020. Late 2020 until now i work as freelance designer at my own mini studio called LUXFORTIS Studio and continuing my study as Information System student at Universitas Terbuka.</p>
           </div>
         </div>
       </div>
     </section>
     <!--akhir summary-->
 
-    <!--portfolio-->
+    <!-- skills -->
+    <section class="skills p-6" id="skills">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            <h2>Skills</h2>
+            <hr>
+          </div>
+        </div>
+        <div class="row p-4">
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="/src-img/ai.jpg" class="card-img-top" alt="Port 1">
+              <div class="card-body">
+                <h5 class="text-center"><b>Adobe Illustrator [Ai]</b></h5>
+                <p class="card-text">Digital Drawing, Visual branding such as logos, brand mascot, merchandising, clothing design with Adobe Illustrator.</p>
+              </div>
+            </div>
+            </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="/src-img/ps.jpg" class="card-img-top" alt="Port 1">
+              <div class="card-body">
+                <h5 class="text-center"><b>Adobe Photoshop [Ps]</b></h5>
+                <p class="card-text">Digital Imaging, Visual branding such as poster, billboard, social media feeds, simple short-video with Adobe Photoshop.</p>
+              </div>
+            </div>
+            </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <img src="/src-img/id.jpg" class="card-img-top" alt="Port 1">
+              <div class="card-body">
+                <h5 class="text-center"><b>Adobe InDesign [Id]</b></h5>
+                <p class="card-text">Digital Editing for mass printing purposes such as book, poster, flyer, postcard, calendar, sticker etc. with Adobe InDesign.</p>
+              </div>
+            </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- akhir skills -->
+
+    <!--portfolio
     <section class="portfolio p-6" id="portfolio">
       <div class="container">
         <div class="row">
@@ -119,7 +163,62 @@
         </div>
       </div>
     </section>
-    <!--akhir portfolio-->
+    akhir portfolio-->
+  
+    <!-- portfolio2 -->
+    <section class="portfolio p-6" id="portfolio">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-12 text-center">
+            <h2>Portfolio</h2>
+            <hr>
+          </div>
+        </div>
+        <div class="row p-4">
+          <div class="col-sm-12">
+            <div id="carouselExampleCaptions" class="carousel slide bg-body-tertiary shadow bg-body-tertiary" data-bs-ride="carousel">
+              <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              </div>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="/src-img/one.jpg" class="d-block w-100" alt="11">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Kopitiam Branding (Latest!)</h5>
+                    <p>Visual Branding "KA LOK TA Kopitiam" at Bali.</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="/src-img/one - Copy.jpg" class="d-block w-100" alt="22">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Merchandising</h5>
+                    <p>LUXFORTIS Clothing Design "TANUKI".</p>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="/src-img/one - Copy - Copy.jpg" class="d-block w-100" alt="33">
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Social Media Management</h5>
+                    <p>"KA LOK TA KOPITIAM" Instagram Feeds Management.</p>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- akhir portfolio2 -->
 
     <!-- Contact -->
     <section class="contact p-6" id="contact">
@@ -158,11 +257,15 @@
     </footer>
     <!-- akhir footer -->
 
+    <canvas class="background"></canvas>
+
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
+    <!-- <script src="/js/script.js"></script> -->
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
